--- a/css/foot.css
+++ b/css/foot.css
@@ -1,5 +1,5 @@
 /* Footer Styles */
-.footer {
+.foot {
     position: relative;
     padding: 2rem 0;
     text-align: center;
@@ -7,7 +7,7 @@
     overflow: hidden;
 }
 
-.footer::before {
+.foot::before {
     content: '';
     position: absolute;
     top: 0;
@@ -26,7 +26,7 @@
     background-size: 200% 100%;
 }
 
-.footer-text {
+.foot-text {
     font-family: 'Orbitron', sans-serif;
     font-size: 1.2rem;
     font-weight: 600;
